make customizations implement Customization class, restructure DefaultResilincePolicy init